feat: update jspecify config with nullaway plugin